# Crawlers-Python

./: main.py  pyproject.toml
assets/js/: s1.js
src/: autocomplete.py  ip.py  opensearch.py  proxy.py  results.py  static.py  version.py
templates/: images.html  search.html
